tests/outref/TFQ01.ref

-- TFQ01 : Test various queries generated by fuzz testing

-------------------------------------------------------------------------------
-- Test https://gitlab.com/YottaDB/DBMS/YDBOcto/-/issues/803#note_1388510181
-------------------------------------------------------------------------------
-- This used to previously SIG-11.
-- Expected output is an ERR_SELECT_STAR_NO_TABLES error.
select (select *) between 1 and 2;

-------------------------------------------------------------------------------
-- Test https://gitlab.com/YottaDB/DBMS/YDBOcto/-/issues/803#note_1388513250
-------------------------------------------------------------------------------
-- This used to previously assert fail as follows.
-- 	src/populate_data_type.c:1165: populate_data_type: Assertion '(select_STATEMENT != table_alias->table->type) || (table_alias->table->v.select->select_list == table_alias->column_list)' failed.
-- Expected output for below query is `1` (aka `t` for TRUE).
select (select 1) between 1 and 2;
select (select 1 is null) between false and true;

-------------------------------------------------------------------------------
-- Test https://gitlab.com/YottaDB/DBMS/YDBOcto/-/issues/803#note_1492162026
-------------------------------------------------------------------------------

-- This used to previously SIG-11 as follows
-- Expected output is a "syntax error".
create table tmp (firstname varchar, fullname1 varchar extract concat(firstname,));

[ERROR]: ERR_SELECT_STAR_NO_TABLES: SELECT * with no tables specified is not valid
LINE 5:3: select (select *) between 1 and 2;
                         ^
???
1
(1 row)
???
1
(1 row)
LINE 15:4: ...rstname varchar, fullname1 varchar extract concat(firstname,));
                                                                          ^
syntax error, unexpected RIGHT_PAREN
